--- a/Erwann.cbp
+++ b/Erwann.cbp
@@ -12,8 +12,19 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-Weffc++" />
+					<Add option="-Wall" />
+					<Add option="-std=c++14" />
+					<Add option="-m32" />
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add library="SDL2" />
+					<Add library="SDL2_image" />
+					<Add library="SDL2_mixer" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Erwann" prefix_auto="1" extension_auto="1" />
@@ -22,6 +33,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -29,14 +41,27 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="`sdl-config --cflags`" />
 			<Add option="-Wall" />
+			<Add option="-m32" />
+			<Add option="`sdl-config --cflags`" />
 		</Compiler>
 		<Linker>
+			<Add option="-m32" />
 			<Add option="`sdl-config --libs`" />
 		</Linker>
-		<Unit filename="cb.bmp" />
+		<Unit filename="include/Coord.h" />
+		<Unit filename="include/Ecran.h" />
+		<Unit filename="include/RsrcFinder.h" />
+		<Unit filename="include/Sound.h" />
+		<Unit filename="include/Sprite.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="rsrc/rond.bmp" />
+		<Unit filename="rsrc/rond.png" />
+		<Unit filename="src/Coord.cpp" />
+		<Unit filename="src/Ecran.cpp" />
+		<Unit filename="src/RsrcFinder.cpp" />
+		<Unit filename="src/Sound.cpp" />
+		<Unit filename="src/Sprite.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
